<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlAddMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.prachigupta.noterem.AddActivity">

    <ScrollView
        android:id="@+id/svAddMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/llMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/eNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/reminder_margin"
                    android:hint="@string/reminder_Note"
                    android:maxLength="@integer/reminder_messageLength"
                    android:minLines="@integer/reminder_maxline"
                    android:textColor="@color/coloBlack"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/tvNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/reminder_margin"
                    android:maxLength="@integer/reminder_messageLength"
                    android:minLines="@integer/reminder_maxline"
                    android:textColor="@color/coloBlack"
                    android:textSize="@dimen/text_size"
                    android:visibility="gone" />
            </LinearLayout>


            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/llMessage"
                android:layout_margin="@dimen/reminder_margin"
                android:textColor="@color/coloBlack" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/tvDate"
                android:layout_margin="@dimen/reminder_margin"
                android:textColor="@color/coloBlack" />

            <Button
                android:id="@+id/bSelectDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/llMessage"
                android:layout_margin="@dimen/reminder_margin"
                android:layout_toEndOf="@id/tvDate"
                android:layout_toRightOf="@id/tvDate"
                android:background="@android:color/transparent"
                android:drawableTop="@android:drawable/ic_menu_my_calendar"
                android:onClick="openDate"
                android:textColor="@color/coloBlack" />

            <Button
                android:id="@+id/bSelectTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvDate"
                android:layout_margin="@dimen/reminder_margin"
                android:layout_toEndOf="@id/tvTime"
                android:layout_toRightOf="@id/tvTime"
                android:background="@android:color/transparent"
                android:drawableTop="@android:drawable/ic_lock_idle_alarm"
                android:onClick="openTime"
                android:textColor="@color/coloBlack" />

            <RadioGroup
                android:id="@+id/rgFrequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTime"
                android:layout_margin="@dimen/reminder_margin"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rbOnce"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/coloBlack"
                    android:checked="true"
                    android:text="@string/once"
                    android:textColor="@color/coloBlack"
                    android:textSize="@dimen/text_size" />

                <RadioButton
                    android:id="@+id/rbDaily"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/coloBlack"
                    android:text="@string/daily"
                    android:textColor="@color/coloBlack"
                    android:textSize="@dimen/text_size" />

                <RadioButton
                    android:id="@+id/rbMonthly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/coloBlack"
                    android:text="@string/monthly"
                    android:textColor="@color/coloBlack"
                    android:textSize="@dimen/text_size" />

                <RadioButton
                    android:id="@+id/rbYearly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/coloBlack"
                    android:text="@string/yearly"
                    android:textColor="@color/coloBlack"
                    android:textSize="@dimen/text_size" />
            </RadioGroup>

            <FrameLayout
                android:id="@+id/map_space"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/map_height"
                android:layout_below="@id/rgFrequency"
                android:layout_margin="@dimen/map_margin"
                android:visibility="gone" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>